--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"dd_location": "/Users/alex/Library/Application Support/Steam/steamapps/common/devildaggers/Devil Daggers.app/Contents/Resources/dd"}
+{"dd_location": ""}
